Commit Phase One
Folders and pages committed.

--- a/design/PreferredOne-Branding/index.html
+++ b/design/PreferredOne-Branding/index.html
@@ -10,8 +10,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="../../css/normalize.min.css">
+        <link rel="stylesheet" href="../../css/main.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
@@ -24,7 +24,7 @@
 
         <div>
             <header class="wrapper clearfix">
-               <img src="img/logo_top_nav.png" alt="Lindsey Bemmels Logo">
+               <img src="../../img/logo_top_nav.png" alt="Lindsey Bemmels Logo">
                 <nav>
                     <ul>
                         <li><a href="#">design</a></li>
@@ -40,25 +40,7 @@
 
                 <article>
                     <section>
-                    <img src="img/fox-main.jpg" alt="Fox Interiors">
-                    </section>
-                    <section>
-                    <img src="img/PreferredOne-Branding-Main.jpg" alt="PreferredOne Branding">
-                    </section>
-                    <section>
-                    <img src="img/Social-Main.jpg" alt="Social Media">
-                    </section>
-                    <section>
-                    <img src="img/P123-Main.jpg" alt="Preferred123">
-                    </section>
-                    <section>
-                    <img src="img/Vinyl-Main.jpg" alt="Vinyl Record Design">
-                    </section>
-                    <section>
-                    <img src="img/StateFair-Main.jpg" alt="State Fair Campaign 2014">
-                    </section>
-                    <section>
-                    <img src="img/DDW-Main.jpg" alt="DDW on Demand">
+                    <h1>PreferredOne Branding</h1>
                     </section>
                     
                 </article>
