Part One HTML Commit
Commit for week one for Web Dev.

--- a/contact/index.html
+++ b/contact/index.html
@@ -10,8 +10,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="../../css/normalize.min.css">
-        <link rel="stylesheet" href="../../css/main.css">
+        <link rel="stylesheet" href="../css/normalize.min.css">
+        <link rel="stylesheet" href="../css/main.css">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
@@ -24,12 +24,12 @@
 
         <div>
             <header class="wrapper clearfix">
-               <img src="../../img/logo_top_nav.png" alt="Lindsey Bemmels Logo">
+               <img src="../img/logo_top_nav.png" alt="Lindsey Bemmels Logo">
                 <nav>
                     <ul>
-                        <li><a href="../..">design</a></li>
-                        <li><a href="../../Experience">experience</a></li>
-                        <li><a href="../../Contact">contact</a></li>
+                        <li><a href="..">design</a></li>
+                        <li><a href="../Experience">experience</a></li>
+                        <li><a href="../Contact">contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -39,11 +39,11 @@
             <div class="main wrapper clearfix">
 
                     <section>
-                    <img src="../../img/Preferred123_Brochure.jpg" alt="Preferred123">
-                    <h1>Preferred123</h1>
-                    <p>Preferred123 is a defined contribution health insurance product for PreferredOne Insurance Company. Starting with its inception in 2012, branding and product identity were created. The branding was applied to both print and online marketing pieces for the 2013 product rollout. These items included a logotype, flyers, brochure and website design.</p>
+                    <h1>Contact</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod sollicitudin faucibus. Phasellus ullamcorper magna quam, a molestie leo imperdiet vel. Phasellus rutrum cursus scelerisque. Vivamus sagittis sed lorem sed pellentesque. Sed molestie quam lacus, mattis euismod risus convallis non. In faucibus elit at odio tincidunt, vitae varius urna vestibulum. Aliquam elementum mollis semper. Nam mollis fringilla congue. Morbi porttitor pulvinar lorem id volutpat.</p>
+					
                     </section>
-
+                    
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
