--- a/design/DDW/index.html
+++ b/design/DDW/index.html
@@ -27,9 +27,9 @@
                <img src="../../img/logo_top_nav.png" alt="Lindsey Bemmels Logo">
                 <nav>
                     <ul>
-                        <li><a href="#">design</a></li>
-                        <li><a href="#">experience</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="../..">design</a></li>
+                        <li><a href="../../Experience">experience</a></li>
+                        <li><a href="../../Contact">contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -38,12 +38,13 @@
         <div class="main-container">
             <div class="main wrapper clearfix">
 
-                <article>
                     <section>
+                    <img src="../../img/DDW_Logo.jpg" alt="Digestive Disease Week On Demand Logo">
                     <h1>DDW on Demand</h1>
+                    <p>Digestive Disease Week On Demand Logo
+Digestive Disease week is a medical conference put on by four major medical societies. Branding was created for the conferences ‘On Demand’ sessions capture product. The logo uses Humanist as the main font to adhere to the clients brand guidelines. The ‘4D’ symbol represents the four medical societies that partake in digestive disease week.</p>
                     </section>
-                    
-                </article>
+
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
