--- a/design/Fox-Interiors/index.html
+++ b/design/Fox-Interiors/index.html
@@ -27,9 +27,9 @@
                <img src="../../img/logo_top_nav.png" alt="Lindsey Bemmels Logo">
                 <nav>
                     <ul>
-                        <li><a href="#">design</a></li>
-                        <li><a href="#">experience</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="../..">design</a></li>
+                        <li><a href="../../Experience">experience</a></li>
+                        <li><a href="../../Contact">contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -37,13 +37,11 @@
 
         <div class="main-container">
             <div class="main wrapper clearfix">
-
-                <article>
                     <section>
+                    <img src="../../img/Fox_Logo.jpg" alt="Fox Interiors Logo">
                     <h1>Fox Interiors</h1>
+                    <p>Metro based interior design company’s identity system created in 2009 for their company launch. Classic font logotype paired with a modern chair vector image reflects the company style as well as creates a theme to carry throughout company marketing pieces. This project was created while freelancing at Inizio Creative. Designed items include a logotype, vector art chair, business card and a promotional postcard.</p>
                     </section>
-                    
-                </article>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
