--- a/design/PreferredOne-Branding/index.html
+++ b/design/PreferredOne-Branding/index.html
@@ -27,9 +27,9 @@
                <img src="../../img/logo_top_nav.png" alt="Lindsey Bemmels Logo">
                 <nav>
                     <ul>
-                        <li><a href="#">design</a></li>
-                        <li><a href="#">experience</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="../..">design</a></li>
+                        <li><a href="../../Experience">experience</a></li>
+                        <li><a href="../../Contact">contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -38,12 +38,11 @@
         <div class="main-container">
             <div class="main wrapper clearfix">
 
-                <article>
                     <section>
+                    <img src="../../img/P1_Brand.jpg" alt="PreferredOne Branding">
                     <h1>PreferredOne Branding</h1>
+                    <p>New branding guidelines were created for PreferredOne Insurance Company in 2012 and applied to all their existing marketing materials. These materials included brochures, consumer flyers, employer flyers, advertisements, HTML emails, presentations, the company website and mobile website.</p>
                     </section>
-                    
-                </article>
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
