--- a/design/Social-Media/index.html
+++ b/design/Social-Media/index.html
@@ -27,9 +27,9 @@
                <img src="../../img/logo_top_nav.png" alt="Lindsey Bemmels Logo">
                 <nav>
                     <ul>
-                        <li><a href="#">design</a></li>
-                        <li><a href="#">experience</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="../..">design</a></li>
+                        <li><a href="../../Experience">experience</a></li>
+                        <li><a href="../../Contact">contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -38,12 +38,12 @@
         <div class="main-container">
             <div class="main wrapper clearfix">
 
-                <article>
                     <section>
+                    <img src="../../img/P1_Facebook.jpg" alt="Social Media">
                     <h1>Social Media</h1>
+                    <p>Branding for PreferredOne Insurance Company was applied to their social media sites including Facebook, LinkedIn, Google+, You Tube and Twitter. Managed appearance and content posted to these social media outlets.</p>
                     </section>
-                    
-                </article>
+
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
