--- a/design/State-Fair/index.html
+++ b/design/State-Fair/index.html
@@ -27,9 +27,9 @@
                <img src="../../img/logo_top_nav.png" alt="Lindsey Bemmels Logo">
                 <nav>
                     <ul>
-                        <li><a href="#">design</a></li>
-                        <li><a href="#">experience</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="../..">design</a></li>
+                        <li><a href="../../Experience">experience</a></li>
+                        <li><a href="../../Contact">contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -38,12 +38,12 @@
         <div class="main-container">
             <div class="main wrapper clearfix">
 
-                <article>
                     <section>
+                    <img src="../../img/P1-Stickers.jpg" alt="PreferredOne Stickers">
                     <h1>PreferredOne State Fair Campaign</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sit amet mi erat. Nulla facilisi. Vivamus iaculis finibus mi, ac dictum tellus auctor eget. Integer aliquet, tellus at iaculis ornare, nisl magna ultricies dui, sed finibus enim erat non diam. Aenean aliquam cursus tortor, dignissim euismod lorem tincidunt vulputate.</p>
                     </section>
-                    
-                </article>
+
 
             </div> <!-- #main -->
         </div> <!-- #main-container -->
