--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                <img src="img/logo_top_nav.png" alt="Lindsey Bemmels Logo">
                 <nav>
                     <ul>
-                        <li><a href="#">design</a></li>
-                        <li><a href="#">experience</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="">design</a></li>
+                        <li><a href="Experience">experience</a></li>
+                        <li><a href="Contact">contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -40,25 +40,25 @@
 
                 <article>
                     <section>
-                    <img src="img/fox-main.jpg" alt="Fox Interiors">
+                    <a href="Design/Fox-Interiors"><img src="img/fox-main.jpg" alt="Fox Interiors"></a>
                     </section>
                     <section>
-                    <img src="img/PreferredOne-Branding-Main.jpg" alt="PreferredOne Branding">
+                    <a href="Design/PreferredOne-Branding"><img src="img/PreferredOne-Branding-Main.jpg" alt="PreferredOne Branding"></a>
                     </section>
                     <section>
-                    <img src="img/Social-Main.jpg" alt="Social Media">
+                    <a href="Design/Social-Media"><img src="img/Social-Main.jpg" alt="Social Media"></a>
                     </section>
                     <section>
-                    <img src="img/P123-Main.jpg" alt="Preferred123">
+                    <a href="Design/Preferred123"><img src="img/P123-Main.jpg" alt="Preferred123"></a>
                     </section>
                     <section>
-                    <img src="img/Vinyl-Main.jpg" alt="Vinyl Record Design">
+                    <a href="Design/Vinyl-Record"><img src="img/Vinyl-Main.jpg" alt="Vinyl Record Design"></a>
                     </section>
                     <section>
-                    <img src="img/StateFair-Main.jpg" alt="State Fair Campaign 2014">
+                    <a href="Design/State-Fair"><img src="img/StateFair-Main.jpg" alt="State Fair Campaign 2014"></a>
                     </section>
                     <section>
-                    <img src="img/DDW-Main.jpg" alt="DDW on Demand">
+                    <a href="Design/DDW"><img src="img/DDW-Main.jpg" alt="DDW on Demand"></a>
                     </section>
                     
                 </article>
