--- a/design/Social-Media/index.html
+++ b/design/Social-Media/index.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="../../css/normalize.min.css">
         <link rel="stylesheet" href="../../css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Raleway:400,200,600' rel='stylesheet' type='text/css'>
 
         <script src="../../js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         <script src="../../js/main.js"></script>
@@ -50,7 +51,7 @@
                     		<li><a href="../Social-Media">Social Media</a></li>
                     		<li><a href="../Vinyl-Record">Vinyl LP Design</a></li>
                     	</ul>
-                </article
+                </article>
 
                     <section>
                     <h1>Social Media</h1>
