--- a/design/Vinyl-Record/index.html
+++ b/design/Vinyl-Record/index.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="../../css/normalize.min.css">
         <link rel="stylesheet" href="../../css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Raleway:400,200,600' rel='stylesheet' type='text/css'>
 
         <script src="../../js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         <script src="../../js/main.js"></script>
@@ -50,11 +51,11 @@
                     		<li><a href="../Social-Media">Social Media</a></li>
                     		<li><a href="../Vinyl-Record">Vinyl LP Design</a></li>
                     	</ul>
-                </article
+                </article>
     
                     <section>
 					<h1>Vinyl Record Design</h1>
-                    <p>12" Vinyl double LP design with a modified gatefold and custom die cut. Abstract photography was taken for the designs imagery.  </p>
+                    <p>12" Vinyl double LP design with a modified gatefold and custom die cut. Abstract photography was taken for the designs imagery.</p>
                     <img src="../../img/vinyl1.jpg" alt="Vinyl LP Front">
                     <img src="../../img/vinyl2.jpg" alt="Vinyl LP Front 2">
                     <img src="../../img/vinyl3.jpg" alt="Vinyl Sleeve">
